tests/snapshots/file_filtering_test__it_reports_io_errors.snap
---
source: tests/file_filtering_test.rs
expression: result.trim_end()
---
No such file or directory (os error 2)
