tests/snapshots/file_filtering_test__it_reports_parsing_errors.snap
---
source: tests/file_filtering_test.rs
expression: result.trim_end()
---
expected value at line 1 column 1
